# ambient-agent

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  idea.md  opencode.json  prompt.md  pyproject.toml  todo.md
.agents/: AGENTS.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
backend/: Dockerfile  UML.md  agent_parser.py  app_data_sources.py  app_manager.py  app_manifest.py  app_records.py  app_store.py  backend_manager.py  codex_service.py  coding_agent.py  coding_agent_runtime.py  context_manager.py  graph_db.py  graph_query_engine.py  graph_subscription.py  llm_config.py  llm_discovery.py  llm_runtime.py  llm_service.py  main.py  models.py  mutation_tickets.py  neo4j_graph_db.py  ontology.py  opencode_permissions.json  opencode_service.py  plan_generation.py  requirements.txt  router_context.py  routing_winner.py  run_events.py  run_service.py  schema_alignment.py  schema_diff.py  schema_verification.py  session_title.py  workspace_storage.py
backend/agent/: dag.py  (+11 more)
docs/: _coverpage.md  _navbar.md  _sidebar.md  index.html  index.md  package-lock.json  package.json
forward/: design.md  plan.md
frontend/: Dockerfile  README.md  package-lock.json  package.json  vite.config.ts
reports/: FINAL_MATRIX.md  SUMMARY.md  baseline.md  ofat_phase2.md  ofat_phase3.json  ofat_phase3.md  ofat_phase4_final_matrix.md  ofat_phase4_summary.md  ofat_phase4_v2_baseline.json  ofat_phase4_v2_baseline.md  ofat_phase4_v2_baseline_3x_conc6.json  ofat_phase4_v2_baseline_3x_conc6.md  ofat_phase4_v2_final.json  ofat_phase4_v2_final.md  ofat_phase4_v2_final_redo.json  ofat_phase4_v2_final_redo.md  ofat_phase4_v2_tracked.json  ofat_phase4_v2_tracked.md  ofat_phase4_v2_tracked_redo.json  ofat_phase4_v2_tracked_redo.md  smoke.md  v_winner.md  v_winner_v2.md
scripts/: __init__.py  apply_routing_winner.py  codex_host_bridge.py  generate_run_event_types.py  run_routing_experiments.py  run_routing_experiments_v2.py  verify_docs.py  verify_uml.py  verify_widget_controller.mjs
tests/: conftest.py
(+211 files in other folders)
