[project]
name = "ambient-agent"
version = "0.1.0"
description = "Ambient Agent is an open-source, self-hostable personal AI assistant framework."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "agent-client-protocol>=0.11.0",
    "fastapi>=0.139.0",
    "uvicorn>=0.51.0",
    "sqlmodel>=0.0.39",
    "websockets>=16.0",
    "pydantic==2.13.4",
    "jinja2>=3.1.6",
    "python-dotenv>=1.2.2",
    "httpx>=0.28.1",
    "litellm==1.92.0",
    "neo4j>=6.0,<7",
    "orjson>=3.10.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.9.0",
]

[tool.ruff]
# Target Python version
target-version = "py311"
line-length = 120

# Enable standard rules
lint.select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "RUF",  # ruff-specific rules
]
lint.ignore = [
    "E501",   # line too long (handled by formatter)
    "B904",   # raise ... from err
    "RUF006", # asyncio.create_task reference
    "RUF012", # mutable class attribute defaults
    "RUF013", # implicit Optional
    "E741",   # ambiguous variable name
    "B007",   # unused loop variable
    "F841",   # unused local variable assignment
    "RUF059", # unused unpacked variables
    "B008",   # function call in argument defaults (FastAPI Depends)
    "E402",   # module level import not at top of file
    "RUF001", # string contains ambiguous double-width punctuation
    "E721",   # type comparison check (instead of isinstance)
    "I001",   # import sorting
    "W291",   # trailing whitespace
    "W293",   # blank line contains whitespace
]

# Exclude common directories
exclude = [
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "workspace",
]

[tool.ruff.lint.isort]
known-first-party = ["backend"]
